# Solving-TDSE-for-an-Arbitrary-V-x-

./: README.md  comline-loader.ipynb  pyproject.toml  requirements.txt  setup.cfg  tdsesolver.py  tdsesolver2.py
old_Python_code/: comline-loader.ipynb
src/Python_code/: solving_tdse.py  solving_tdse2.py  tdse_cmd.py  untitled0.py  user_interface.py  user_interface_alternative.py
src/example_package/: solving_tdse with functional forms.py  solving_tdse.py  user_interface.py
