[metadata]
name = tdse-solver-dascroft
version = 0.0.1
author = Daniyal Ascroft
author_email = ZJAP013@live.rhul.ac.uk
description = Solving the TDSE for an Arbitrary potential
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dascroft/Solving-TDSE-for-an-Arbitrary-V-x-
project_urls =
    Bug Tracker = https://github.com/dascroft/Solving-TDSE-for-an-Arbitrary-V-x-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    add_one = example_package.command_line_interface:main
